2009-10-31 16:16  paddockd

	* [r93] ChangeLog, src/slimaudio/slimaudio_output.c,
	  src/squeezeslave/squeezeslave.c: Added audio format supported
	  check to default device and if not change the default to be the
	  first available device that does.
	  Increased version to 93.

2009-10-31 13:19  paddockd

	* [r92] src/slimaudio/slimaudio_output.c, src/squeezeslave/help.c,
	  src/squeezeslave/squeezeslave.c: Added pre-check to audio device
	  listing -L option to confirm device supports 44.1KHz, 16-bit, 2
	  channel audio. If not, the device is not listed in Output
	  Devices. The -o<device> option still allows you to select any
	  device number, but the subsequent audio device open call will
	  most likely fail.
	  Increased version to 92.

2009-10-29 12:09  paddockd

	* [r91] ChangeLog, makefile.linux24-alsa,
	  makefile.linux24-alsa-display, makefile.linux26-alsa,
	  makefile.linux26-alsa-display, makefile.linux26-ppc-alsa,
	  makefile.linux26-ppc-alsa-display, makefile.mingw32-asio,
	  makefile.mingw32-padev, src/squeezeslave/squeezeslave.c: Updated
	  all padev makefiles to use current 20091022 snapshot.
	  Increased version to 91.

2009-10-29 11:16  paddockd

	* [r90] makefile.linux24-alsa, makefile.linux24-alsa-display,
	  makefile.linux26-alsa, makefile.linux26-alsa-display,
	  makefile.linux26-i64-alsa, makefile.linux26-i64-alsa-display,
	  makefile.linux26-ppc-alsa, makefile.linux26-ppc-alsa-display,
	  makefile.mingw32-asio, makefile.mingw32-padev,
	  makefile.osxintel-padev, makefile.osxppc-padev,
	  src/slimaudio/slimaudio.h, src/slimaudio/slimaudio_output.c,
	  src/squeezeslave/help.c, src/squeezeslave/squeezeslave.c:
	  Replaced all occurances of PORTAUDIO_ALSA with PORTAUDIO_DEV to
	  remove the Linux specific reference to ALSA.

2009-10-29 10:58  paddockd

	* [r89] lib/libportaudio/osxppc, lib/libportaudio/osxppc/build,
	  lib/libportaudio/osxppc/include, lib/libportaudio/osxppc/lib,
	  makefile.osx, makefile.osxppc, makefile.osxppc-padev,